--- a/src/CardViewer.css
+++ b/src/CardViewer.css
@@ -1,5 +1,6 @@
 .card {
     border: 1px solid #000000;
+    background-color: aliceblue;
     text-align: center;
     width: 300px;
     padding: 50px;
